profile image aligns correctly

--- a/src/Profile/Profile.css
+++ b/src/Profile/Profile.css
@@ -1,7 +1,25 @@
 
-.profile,
 .interests,
-.locations,
-.profile-photo {
+.locations {
     border: 2px solid purple;
+}
+
+#profile {
+    background-color: white;
+    margin-left: 45px;
+    margin-right: 20px;
+    border-radius: 5px;
+}
+
+#avatar {
+    width: 150px;
+    height: 150px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+.img-preview{
+
+    padding: 15px;
 }
